v2.7.1   - With NSIS exe installer, made Windows' icons show the version 
	   number.
	 - Bug fixed CTL Look Modulation Transform Picker.
	 - Bug fixed libACESclip to use linkTransform instead of name
	   when available.
	 - Color picker now shows colors with the LUT applied.  This 
	   makes the gui (zoom) respond a tad slower when the LUT is on.
	 - Made DEB/RPM installer on Linux place an icon in desktop.

v2.7.0   - Added ACEScsc files as IDTs to support DigitalLAD sample picture.
	 - Made xml and ctl files never show as sequences of frames in
	   file requester.
	 - On Linux, now mrViewer is added to the system path thru a symlink.
	 - On Linux, mrViewer is added to the menus (Graphic) if run from the
	   deb or rpm file.
	 - Added Mirror Horizontal and Vertical to Image RMB popup menu.
	 - Added baking CTL/ICC transforms to a 96x96x96 grid.
	 - Removed Load button from CTL requester as it was not working right.
	 - Resolved a quoting issue in mrViewer.sh to work with parameters
	   with spaces.
	 - Bug fixed parsing of hotkeys when some ctrl, alt or meta keys were
	   combined.
	 - Bug fixed CTL pipeline when CTL file is not found.
	 - CTL's IDT, RRT, ODT keywords are allowed anywhere in the
	   filename, not only as prefixes.
	 - Made saving of ACESclip XML file automatically fill up the name in
	   file requester.
	 - NSIS installer: Win64 and Win32 create different icons 
	   (mrViewer-64 and mrViewer-32 respectively).

v2.6.9   - Bug fixed Cancel button in CTL requester.
	 - Added a Load button to CTL requester to load CTL scripts not in
	   CTL_MODULE_PATH.
	 - Added support for CTL Input Device Transforms (IDTs).
	 - Added support for CTL Look Mod Transforms (LMTs).
	 - Added support to ACES 1.0 Clip Metadata to store all transforms
	   in an XML file.

v2.6.8   - Bug fixed lut creation on 32 and 128 sizes.  Previously, they would
	   get created and not cached.
	 - Adapted CTL pipeline to be compatible with ACES 1.0.  The one