@@ -1,11 +1,11 @@
 [Desktop Entry]
-Name=mrViewer v@VERSION@
+Name=mrViewer-64 v@VERSION@
 Comment=Professional Video and Flipbook player
 Exec="@CMAKE_INSTALL_PREFIX@/mrViewer-v@VERSION@-Linux-64/bin/mrViewer.sh" %F
 Icon=mrViewer.png
-Categories=Graphics;AudioVideo;2DGraphics;RasterGraphics;FLTK;
-Comment[en_US]=Professional Image Viewer, Video and Audio play
-MimeType=video/x-theora+ogg;video/x-sgi-movie;video/x-ogm+ogg;video/x-nsv;video/x-msvideo;video/x-ms-wmv;video/x-ms-wmp;video/x-ms-asf;video/x-mng;video/x-matroska;video/x-javafx;video/x-flv;video/x-flic;video/x-anim;video/webm;video/wavelet;video/vnd.rn-realvideo;video/vnd.mpegurl;video/vivo;video/quicktime;video/ogg;video/mpeg;video/mp4;video/mp2t;video/dv;video/annodex;video/3gpp2;video/3gpp;image/x-xcf;image/x-tga;image/x-sun-raster;image/x-sgi;image/x-rgb;image/x-portable-pixmap;image/x-pic;image/x-pcx;image/x-panasonic-raw;image/x-ilbm;image/x-iff;image/x-exr;image/x-dib;image/vnd.microsoft.icon;image/vnd.adobe.photoshop;image/tiff;image/svg+xml;image/png;image/jpeg;image/gif;image/dpx;image/bmp;
+Categories=AudioVideo;Player;Video;Grapics;2DGraphics;RasterGraphics;FLTK;
+Comment[en_US]=Professional Image Viewer, Video and Audio playback
+MimeType=audio/x-mp3;audio/x-wav;video/x-theora+ogg;video/x-sgi-movie;video/x-ogm+ogg;video/x-nsv;video/x-msvideo;video/x-ms-wmv;video/x-ms-wmp;video/x-ms-asf;video/x-mng;video/x-matroska;video/x-javafx;video/x-flv;video/x-flic;video/x-anim;video/webm;video/wavelet;video/vnd.rn-realvideo;video/vnd.mpegurl;video/vivo;video/quicktime;video/ogg;video/mpeg;video/mp4;video/mp2t;video/dv;video/annodex;video/3gpp2;video/3gpp;image/x-xcf;image/x-tga;image/x-sun-raster;image/x-sgi;image/x-rgb;image/x-portable-pixmap;image/x-pic;image/x-pcx;image/x-panasonic-raw;image/x-ilbm;image/x-iff;image/x-exr;image/x-sxr;image/x-dib;image/vnd.microsoft.icon;image/vnd.adobe.photoshop;image/tiff;image/svg+xml;image/png;image/jpeg;image/gif;image/dpx;image/bmp;
 StartupNotify=false
 Terminal=false
 Type=Application
