@@ -591,6 +591,11 @@ fltk::StyleSet*     newscheme = NULL;
       }
 
     {
+        lut.get( "lut_in_pixel_bar", tmp, 0 );
+        uiPrefs->uiPrefsLutInPixelBar->value( tmp );
+    }
+
+    {
       fltk::Preferences odt( lut, "ODT" );
       {
 	odt.get( "algorithm", tmp, 0 );
@@ -1122,6 +1127,9 @@ fltk::StyleSet*     newscheme = NULL;
       {
 	lut.set("quality", uiPrefs->uiLUT_quality->child(i)->label() );
       }
+
+    lut.set( "lut_in_pixel_bar", uiPrefs->uiPrefsLutInPixelBar->value() );
+
     {
       fltk::Preferences odt( lut, "ODT" );
       {
